--- a/games/tetris/package.json
+++ b/games/tetris/package.json
@@ -1,37 +1,41 @@
 {
-  "name": "typescript-tetris",
+  "name": "game-tetris",
   "version": "1.0.0",
+  "private": true,
   "description": "OpenSource Game",
-  "main": "src/index.ts",
   "author": "Ronaldo Santiago",
   "license": "MIT",
   "dependencies": {
-    "@robotlegsjs/core": "^0.1.1",
-    "@robotlegsjs/pixi": "^0.1.2",
-    "@robotlegsjs/pixi-palidor": "^0.1.1",
-    "pixi.js": "^4.6.1",
-    "reflect-metadata": "^0.1.10"
+    "@robotlegsjs/core": "^3.0.0",
+    "@robotlegsjs/pixi": "^3.0.0",
+    "@robotlegsjs/pixi-palidor": "^3.0.0",
+    "pixi.js": "^5.2.1",
+    "reflect-metadata": "^0.1.13",
+    "tslib": "^2.2.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.0.5",
-    "@types/mocha": "^2.2.44",
-    "@types/pixi.js": "^4.6.0",
-    "chai": "^4.1.2",
-    "html-webpack-plugin": "^2.30.1",
-    "http-server": "^0.10.0",
-    "mocha": "^4.0.1",
-    "prettier": "^1.8.2",
-    "ts-loader": "^3.1.1",
-    "ts-node": "^3.3.0",
-    "tslint": "^5.8.0",
-    "tslint-config-prettier": "^1.6.0",
-    "typescript": "^2.6.1",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4"
+    "@types/chai": "^4.2.18",
+    "@types/mocha": "^8.2.2",
+    "chai": "^4.3.4",
+    "html-webpack-plugin": "^5.3.1",
+    "mocha": "^9.0.0",
+    "prettier": "^2.3.1",
+    "rimraf": "^3.0.2",
+    "terser-webpack-plugin": "^5.1.3",
+    "ts-loader": "^9.2.3",
+    "ts-node": "^10.0.0",
+    "typescript": "~4.2.4",
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
-    "autoformat": "prettier --config .prettierrc --write '{src,test}/**/*.ts'",
-    "start": "webpack-dev-server --config ./webpack.setzer.config.js",
+    "start": "webpack serve --config ./webpack.setzer.config",
+    "bundle": "webpack --env production --config ./webpack.setzer.config",
+    "autoformat": "prettier --config ../../.prettierrc --ignore-path ../../.prettierignore --write --list-different .",
+    "cleanup": "rimraf dist",
+    "build": "npm run cleanup && npm run bundle",
+    "prepare": "npm run build",
     "test": "mocha test/**/*.test.ts --require ts-node/register"
   },
   "keywords": [
