--- a/games/tetris/package.json
+++ b/games/tetris/package.json
@@ -15,10 +15,17 @@
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@rushstack/eslint-config": "^2.3.4",
     "@types/chai": "^4.2.18",
     "@types/mocha": "^8.2.2",
     "@types/webpack-env": "^1.16.0",
     "chai": "^4.3.4",
+    "eslint": "^7.28.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsdoc": "^35.1.3",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-unicorn": "^33.0.1",
     "html-webpack-plugin": "^5.3.1",
     "mocha": "^9.0.0",
     "nyc": "^15.1.0",
@@ -37,6 +44,12 @@
     "start": "webpack serve --config ./webpack.setzer.config",
     "bundle": "webpack --env production --config ./webpack.setzer.config",
     "autoformat": "prettier --config ../../.prettierrc --ignore-path ../../.prettierignore --write --list-different .",
+    "lint-fix:src": "eslint -c .eslintrc.js --ext .ts ./src --fix",
+    "lint-fix:test": "eslint -c .eslintrc.js --ext .ts ./test --fix",
+    "lint-fix": "npm run lint-fix:src && npm run lint-fix:test",
+    "lint:src": "eslint -c .eslintrc.js --ext .ts ./src",
+    "lint:test": "eslint -c .eslintrc.js --ext .ts ./test",
+    "lint": "npm run lint:src && npm run lint:test",
     "cleanup": "rimraf dist",
     "build": "npm run cleanup && npm run bundle",
     "prepare": "npm run build",
