--- a/games/space-invaders/package.json
+++ b/games/space-invaders/package.json
@@ -9,6 +9,10 @@
     "start": "webpack serve --config ./webpack.config.js",
     "bundle": "webpack --env production",
     "autoformat": "prettier --config ../../.prettierrc --ignore-path ../../.prettierignore --write --list-different .",
+    "lint-fix:src": "eslint -c .eslintrc.js --ext .ts ./src --fix",
+    "lint-fix": "npm run lint-fix:src",
+    "lint:src": "eslint -c .eslintrc.js --ext .ts ./src",
+    "lint": "npm run lint:src",
     "cleanup": "rimraf dist",
     "build": "npm run cleanup && npm run bundle",
     "prepare": "npm run build"
@@ -30,6 +34,13 @@
     "tslib": "^2.2.0"
   },
   "devDependencies": {
+    "@rushstack/eslint-config": "^2.3.4",
+    "eslint": "^7.28.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsdoc": "^35.1.3",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-unicorn": "^33.0.1",
     "html-webpack-plugin": "^5.3.1",
     "imports-loader": "^3.0.0",
     "prettier": "^2.3.1",
