--- a/games/minesweeper/package.json
+++ b/games/minesweeper/package.json
@@ -7,10 +7,10 @@
     "start": "webpack serve --config ./webpack.config.js",
     "bundle": "webpack --env production --config ./webpack.config.js",
     "autoformat": "prettier --config ../../.prettierrc --ignore-path ../../.prettierignore --write --list-different .",
-    "cleanup": "rimraf coverage && rimraf dist",
+    "cleanup": "rimraf coverage && rimraf dist && rimraf dist-test",
     "build": "npm run cleanup && npm run bundle",
     "prepare": "npm run build",
-    "test": "./node_modules/.bin/karma start --single-run",
+    "test": "node --max-old-space-size=2048 ./node_modules/karma/bin/karma start --single-run",
     "test:tdd": "./node_modules/.bin/karma start"
   },
   "keywords": [
@@ -36,6 +36,7 @@
     "@types/chai": "^4.2.18",
     "@types/mocha": "^8.2.2",
     "@types/sinon": "^10.0.2",
+    "@types/webpack-env": "^1.16.0",
     "chai": "^4.3.4",
     "es6-map": "^0.1.5",
     "es6-symbol": "^3.1.3",
@@ -54,8 +55,10 @@
     "karma-webpack": "^5.0.0",
     "mocha": "^9.0.0",
     "prettier": "^2.3.1",
+    "puppeteer": "^10.0.0",
     "rimraf": "^3.0.2",
     "sinon": "^11.1.1",
+    "terser-webpack-plugin": "^5.1.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "typescript": "~4.2.4",
