--- a/games/match3/package.json
+++ b/games/match3/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "typescript-match3",
+  "name": "game-match3",
   "version": "1.0.0",
+  "private": true,
   "description": "OpenSource Game",
-  "main": "src/index.ts",
   "scripts": {
-    "autoformat": "prettier --config .prettierrc --write {src,test}/**/*.ts",
-    "start": "webpack-dev-server --config ./webpack.setzer.config.js",
-    "clean": "rimraf coverage",
-    "lint": "tslint-config-prettier-check ./tslint.json",
-    "prepush": "npm run clean && npm run autoformat && npm run lint",
-    "test": "./node_modules/.bin/karma start --single-run --browsers PhantomJS",
-    "karma": "karma start"
+    "start": "webpack serve --config ./webpack.setzer.config.js",
+    "bundle": "webpack --env production --config ./webpack.setzer.config.js",
+    "autoformat": "prettier --config ../../.prettierrc --ignore-path ../../.prettierignore --write --list-different .",
+    "cleanup": "rimraf coverage && rimraf dist && rimraf dist-test && rimraf lib && rimraf lib-test",
+    "build": "npm run cleanup && npm run bundle",
+    "prepare": "npm run build",
+    "test": "node --max-old-space-size=2048 ./node_modules/karma/bin/karma start --single-run",
+    "test:tdd": "node --max-old-space-size=2048 ./node_modules/karma/bin/karma start"
   },
   "keywords": [
     "Game"
@@ -18,47 +19,47 @@
   "author": "Ronaldo Santiago",
   "license": "MIT",
   "dependencies": {
-    "@robotlegsjs/core": "^0.1.1",
-    "@robotlegsjs/pixi": "^0.1.2",
-    "@robotlegsjs/pixi-palidor": "^0.1.1",
-    "gsap": "^1.20.3",
-    "pixi.js": "^4.6.1",
-    "prettier": "^1.8.2",
-    "reflect-metadata": "^0.1.10"
+    "@robotlegsjs/core": "^3.0.0",
+    "@robotlegsjs/pixi": "^3.0.0",
+    "@robotlegsjs/pixi-palidor": "^3.0.0",
+    "gsap": "^1.20.6",
+    "pixi.js": "^5.2.1",
+    "reflect-metadata": "^0.1.13",
+    "tslib": "^2.2.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.0.5",
-    "@types/mocha": "^2.2.44",
-    "@types/pixi.js": "^4.6.0",
-    "@types/sinon": "^4.0.0",
-    "chai": "^4.1.2",
+    "@types/bluebird": "^3.5.35",
+    "@types/chai": "^4.2.18",
+    "@types/mocha": "^8.2.2",
+    "@types/sinon": "^10.0.2",
+    "@types/webpack-env": "^1.16.0",
+    "bluebird": "^3.7.2",
+    "chai": "^4.3.4",
     "es6-map": "^0.1.5",
-    "es6-symbol": "^3.1.1",
-    "html-webpack-plugin": "^2.30.1",
-    "istanbul": "^0.4.5",
-    "istanbul-instrumenter-loader": "^3.0.0",
-    "jasmine-core": "^2.8.0",
-    "karma": "^1.7.1",
-    "karma-chai": "^0.1.0",
-    "karma-coverage-istanbul-reporter": "^1.3.0",
+    "es6-symbol": "^3.1.3",
+    "html-webpack-plugin": "^5.3.1",
+    "istanbul-instrumenter-loader": "^3.0.1",
+    "karma": "^6.3.3",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-es6-shim": "^1.0.0",
-    "karma-mocha": "^1.3.0",
+    "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
-    "karma-phantomjs-launcher": "^1.0.4",
-    "karma-remap-istanbul": "^0.6.0",
-    "karma-sinon": "^1.0.5",
-    "karma-sourcemap-loader": "^0.3.7",
+    "karma-sinon-chai": "^2.0.2",
+    "karma-sourcemap-loader": "^0.3.8",
     "karma-sourcemap-writer": "^0.1.2",
-    "karma-webpack": "^2.0.6",
-    "mocha": "^4.0.1",
-    "rimraf": "^2.6.2",
-    "sinon": "^4.1.2",
-    "ts-loader": "^3.1.1",
-    "ts-node": "^3.3.0",
-    "tslint": "^5.8.0",
-    "tslint-config-prettier": "^1.6.0",
-    "typescript": "^2.6.1",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4"
+    "karma-webpack": "^5.0.0",
+    "mocha": "^9.0.0",
+    "prettier": "^2.3.1",
+    "puppeteer": "^10.0.0",
+    "rimraf": "^3.0.2",
+    "sinon": "^11.1.1",
+    "terser-webpack-plugin": "^5.1.3",
+    "ts-loader": "^9.2.3",
+    "ts-node": "^10.0.0",
+    "typescript": "~4.2.4",
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   }
 }
