--- a/games/match3/package.json
+++ b/games/match3/package.json
@@ -7,6 +7,12 @@
     "start": "webpack serve --config ./webpack.setzer.config.js",
     "bundle": "webpack --env production --config ./webpack.setzer.config.js",
     "autoformat": "prettier --config ../../.prettierrc --ignore-path ../../.prettierignore --write --list-different .",
+    "lint-fix:src": "eslint -c .eslintrc.js --ext .ts ./src --fix",
+    "lint-fix:test": "eslint -c .eslintrc.js --ext .ts ./test --fix",
+    "lint-fix": "npm run lint-fix:src && npm run lint-fix:test",
+    "lint:src": "eslint -c .eslintrc.js --ext .ts ./src",
+    "lint:test": "eslint -c .eslintrc.js --ext .ts ./test",
+    "lint": "npm run lint:src && npm run lint:test",
     "cleanup": "rimraf coverage && rimraf dist && rimraf dist-test && rimraf lib && rimraf lib-test",
     "build": "npm run cleanup && npm run bundle",
     "prepare": "npm run build",
@@ -28,6 +34,7 @@
     "tslib": "^2.2.0"
   },
   "devDependencies": {
+    "@rushstack/eslint-config": "^2.3.4",
     "@types/bluebird": "^3.5.35",
     "@types/chai": "^4.2.18",
     "@types/mocha": "^8.2.2",
@@ -37,6 +44,12 @@
     "chai": "^4.3.4",
     "es6-map": "^0.1.5",
     "es6-symbol": "^3.1.3",
+    "eslint": "^7.28.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsdoc": "^35.1.3",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-unicorn": "^33.0.1",
     "html-webpack-plugin": "^5.3.1",
     "istanbul-instrumenter-loader": "^3.0.1",
     "karma": "^6.3.3",
