--- a/games/tetris/.mocharc.json
+++ b/games/tetris/.mocharc.json
@@ -2,5 +2,6 @@
   "recursive": true,
   "full-trace": true,
   "bail": true,
-  "spec": "./test/**/*.test.ts"
+  "spec": "./test/**/*.test.ts",
+  "require": "reflect-metadata"
 }
