tsconfig include only valid folders

--- a/games/scratchcard/tsconfig.eslint.json
+++ b/games/scratchcard/tsconfig.eslint.json
@@ -3,5 +3,5 @@
   "compilerOptions": {
     "outDir": "lib-test"
   },
-  "include": ["./src/**/*.ts", "./test/**/*.ts"]
+  "include": ["./src/**/*.ts"]
 }
