--- a/packages/pixi-palidor/tsconfig.example.json
+++ b/packages/pixi-palidor/tsconfig.example.json
@@ -3,5 +3,5 @@
   "compilerOptions": {
     "outDir": "lib-example"
   },
-  "include": ["./example/**/*.ts"]
+  "include": ["./src/**/*.ts", "./example/**/*.ts"]
 }
