use importHelpers flag from tsconfig and remove from scripts

--- a/packages/phaser-ce-signalcommandmap/package.json
+++ b/packages/phaser-ce-signalcommandmap/package.json
@@ -14,8 +14,8 @@
     "lint:test": "eslint -c .eslintrc.js --ext .ts ./test",
     "lint": "npm run lint:src && npm run lint:test",
     "cleanup": "rimraf .nyc_output && rimraf coverage && rimraf lib && rimraf lib-test && rimraf dist && rimraf dist-test",
-    "compile:src": "tsc -d --importHelpers",
-    "compile:test": "tsc -p tsconfig.test.json -d --importHelpers",
+    "compile:src": "tsc -d",
+    "compile:test": "tsc -p tsconfig.test.json -d",
     "dist:dev": "webpack",
     "dist:production": "webpack --env production",
     "build": "npm run cleanup && npm run compile:src",
