--- a/packages/createjs/package.json
+++ b/packages/createjs/package.json
@@ -17,9 +17,9 @@
     "lint:example": "eslint -c .eslintrc.js --ext .ts ./example",
     "lint": "npm run lint:src && npm run lint:test && npm run lint:example",
     "cleanup": "rimraf .nyc_output && rimraf coverage && rimraf lib && rimraf lib-test && rimraf lib-example && rimraf dist && rimraf dist-test",
-    "compile:src": "tsc -d",
-    "compile:test": "tsc -p tsconfig.test.json -d",
-    "compile:example": "tsc -p tsconfig.example.json -d",
+    "compile:src": "tsc",
+    "compile:test": "tsc -p tsconfig.test.json",
+    "compile:example": "tsc -p tsconfig.example.json",
     "dist:dev": "webpack",
     "dist:production": "webpack --env production",
     "build:example": "webpack --config ./webpack.example.config.js --env.production",
