--- a/packages/signals/package.json
+++ b/packages/signals/package.json
@@ -15,8 +15,8 @@
     "lint": "npm run lint:src && npm run lint:test",
     "autoformat": "prettier --config ../../.prettierrc --ignore-path ../../.prettierignore --write --list-different .",
     "cleanup": "rimraf .nyc_output && rimraf coverage && rimraf lib && rimraf lib-test && rimraf dist-test",
-    "compile:src": "tsc -d",
-    "compile:test": "tsc -p tsconfig.test.json -d",
+    "compile:src": "tsc",
+    "compile:test": "tsc -p tsconfig.test.json",
     "dist:dev": "webpack",
     "dist:production": "webpack --env production",
     "build": "npm run cleanup && npm run compile:src",
